# llm-mcp-reasoning

./: .env.example  .gitignore  README.md  demo_final.ipynb  ui.py
mcp-demo/: pyproject.toml
mcp_client/: client.py  main.py  pyproject.toml
mcp_host/: aio_client.py  server.py  tools.py
mcp_server/: README.md  aio_client.py  pyproject.toml  server.py
schemas/: aggregation_by_time.schema.json
test/: test_aggregation.py  test_aggregation_time.py  test_aio_api.py  tset_LLM_connection.py
